--- a/styles/default.css
+++ b/styles/default.css
@@ -6,7 +6,7 @@ body {
 /*	font-size:10pt; */
 	color:#000000; 
 
-	background-color: #EFC04F;
+	background-color: #E9BB5B;
 	/* background-image: linear-gradient(#EFC04F, #FFE08F); */ 
 	/* background-attachment: fixed; */
 	}
